# comic-downloader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
config/: settings.py
core/: __init__.py  browser.py  comic.py  downloader.py  file_manager.py  image.py  library.py  logger.py  pipeline.py  scraper.py  url_builder.py
core/logging/: logger.py
core/models/: __init__.py  comic.py  image.py
core/scrapers/: __init__.py  base.py  browser.py
core/services/: __init__.py  downloader.py  library.py  pipeline.py
core/storage/: __init__.py  file_manager.py  url_builder.py
data/: data.py  data.xlsx
sources/: Asura.py  Comic.py  Rizz.py  Webtoon.py  __init__.py
utils/: Browser.py  compress.py  scraper.py  utils.py
